[package]
name = "s-bahn-predictor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "scraper"
src = "src/lib.rs"

[[bin]]
name = "analysis"
src = "src/analysis.rs"

[[bin]]
name = "scraper"
src = "src/scraper.rs"

[dependencies]
chrono = "0.4.31"
dotenvy = "0.15.7"
geojson = "0.24.1"
macroquad = "0.4.4"
serde = "1.0.190"
serde_json = "1.0.108"
serde_with = "3.4.0"
tungstenite = { version = "0.20.1", features = ["native-tls"] }
url = "2.4.1"
